--- a/js/js-3.html
+++ b/js/js-3.html
@@ -68,11 +68,24 @@
         }
         creatLi();
 
+        function creatNum(v1){
+            return function(v2){
+                return v1+v2;
+            }
+        }
+
+        var n1 = creatNum(3000);
+        var sum1 = n1(500);
+        var n2 = creatNum(5000);
+        var sum2 = n2(1000);
+        console.log(sum1,sum2);
+
         setInterval(function(n){
             console.log(n);
         },1000,800);
         //第三个参数可以传值
 
+        
         ((n)=>{
             console.log(n);
         })(1);
