--- a/js/js-3.html
+++ b/js/js-3.html
@@ -67,6 +67,15 @@
             }
         }
         creatLi();
+
+        setInterval(function(n){
+            console.log(n);
+        },1000,800);
+        //第三个参数可以传值
+
+        ((n)=>{
+            console.log(n);
+        })(1);
     </script>
 </body>
 </html>
