--- a/js/js-4.html
+++ b/js/js-4.html
@@ -111,6 +111,36 @@
 
     new phonePlus().msg();
 
+    //观察者模式
+    var shop = {
+        list:[],
+        msg:function(){
+            for(var i = 0;i<this.list.length;i++){
+                this.list[i].apply(this,arguments);
+            }
+        },
+        add:function(obj){
+           this.list.push(obj.buy);
+        }
+    }
+
+    var junjun = {
+        buy:function(v){
+            console.log(v+'junjun');
+        }
+    }
+
+    var xiaoxiao = {
+        buy:function(v){
+            console.log(v+'xiaoxioa');
+        }
+    }
+
+    shop.add(junjun);
+    shop.add(xiaoxiao);
+    //shop.add(xiaoxiao.buy);
+    shop.msg('hello');
+
     </script>
 </body>
 </html>
